--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -12,13 +12,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #9849e9;
+  --ifm-color-primary-dark: #7f31cc;
+  --ifm-color-primary-darker: #6822af;
+  --ifm-color-primary-darkest: #59169c;
+  --ifm-color-primary-light: #9c53e5;
+  --ifm-color-primary-lighter: #a363e4;
+  --ifm-color-primary-lightest: #b37fe6;
   --ifm-code-font-size: 95%;
   --ifm-font-family-base: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   --ifm-font-family-monospace: 'Inter', SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
@@ -27,12 +27,12 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #ad74e6;
+  --ifm-color-primary-dark: #a25de6;
+  --ifm-color-primary-darker: #9446e2;
+  --ifm-color-primary-darkest: #8131d1;
+  --ifm-color-primary-light: #b27fe5;
+  --ifm-color-primary-lighter: #bb8fe7;
+  --ifm-color-primary-lightest: #c49fe8;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
