Added Gaurav's bio; minor style updates

--- a/src/pages/about.module.css
+++ b/src/pages/about.module.css
@@ -6,6 +6,11 @@
     text-align: center;
 }
 
+
+[data-theme='light'] .aboutHeader {
+    background-color: var(--ifm-color-primary-lightest);
+}
+
 .aboutHeader h1 {
     font-size: 3rem;
     margin-bottom: 1.5rem;
