Adjusted color in about us section

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -33,6 +33,6 @@
   --ifm-color-primary-darkest: #8131d1;
   --ifm-color-primary-light: #b27fe5;
   --ifm-color-primary-lighter: #bb8fe7;
-  --ifm-color-primary-lightest: #c49fe8;
+  --ifm-color-primary-lightest: #c9a9ea;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
